@@ -26,6 +26,7 @@
 * Added the support for Intel OIDN auxiliary buffers pre-filtering
 * Added the support for new pyluxcoretools MakeTX
 * Introduced the MIPMAPMEM Scene texture image maps resize policy
+* GPU out-of-core rendering now automatically disable Film GPU image pipeline to save more memory
 
 ### Fixed Bugs
 
